# app/src/routes/index.js
@@ -3,6 +3,7 @@ const course = require('./course');
 const user = require('./user')
 const exam = require('./exam')
 const suscription = require('./suscription')
+const wallet = require('./wallet')
 
 const router = express.Router();
 
@@ -25,5 +26,6 @@ router.use('/course', course);
 router.use('/user', user)
 router.use('/exam', exam)
 router.use('/suscription', suscription)
+router.use('/wallet', wallet)
 
 module.exports = router;
